# AI-Engineer-OS

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  SPEC.md  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/capstone/: page.tsx
app/learn/: layout.tsx  page.tsx
app/learn/[...slug]/: page.tsx
app/playground/: page.tsx
capstone/filingsage/: README.md
capstone/filingsage/m1-summarizer/: .gitignore  README.md  eval.py  fetch_filings.py  main.py  pyproject.toml  schema.py  summarize.py  tickers.txt
components/: Callout.tsx  CodeBlock.tsx  CompleteButton.tsx  CostMeter.tsx  DiagramMermaid.tsx  InterviewCard.tsx  MasteryGate.tsx  MobileSidebar.tsx  ProgressBar.tsx  Sidebar.tsx
components/mdx/: MDXComponents.tsx  PreCode.tsx
components/ui/: alert.tsx  button.tsx  card.tsx  collapsible.tsx  dialog.tsx  input.tsx  progress.tsx  scroll-area.tsx  select.tsx  sheet.tsx  slider.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
content/modules/00-setup/01-toolchain/: index.mdx
content/modules/00-setup/02-api-keys/: index.mdx
content/modules/00-setup/03-first-call/: index.mdx
content/modules/00-setup/04-git-for-ai/: index.mdx
content/modules/01-foundations/01-modern-python/: index.mdx
content/modules/01-foundations/02-httpx-async/: eval.py  index.mdx  lab.ipynb  solution.py
content/modules/01-foundations/03-pydantic/: eval.py  index.mdx  lab.ipynb  solution.py
content/modules/01-foundations/04-pandas-minimum/: eval.py  index.mdx  lab.ipynb  solution.py
lib/: colab.ts  content.ts  pricing.ts  schema.ts  shiki.ts
(+89 files in other folders)
