[project]
name = "filingsage-m1-summarizer"
version = "0.1.0"
description = "FilingSage M1: structured 10-K summarizer via Anthropic tool_use + Pydantic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "tenacity>=9.0.0",
]

[project.scripts]
filingsage-m1 = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
